feat: add col-right and fix container-big

--- a/css/style.css
+++ b/css/style.css
@@ -12,14 +12,18 @@ body{
 .row-big{
     height: 15vh;
     background-color: #009688;
+    position: relative;
 }
 
 /*CONTAINER*/
 .container-big{
     display: flex;
-    align-items: center;
     width: 90%;
     margin: 0 auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .col-left{
     width: 35%;
@@ -28,6 +32,8 @@ body{
     flex-direction: column;
     background-color: #fff;
     border: 1px solid rgb(200, 200, 200);
+    flex-grow: 0;
+    flex-shrink: 0;
 }
 .col-right{
     width: 65%;
@@ -35,6 +41,8 @@ body{
     overflow-y: auto;
     background-color: #fff;
     border: 1px solid rgb(200, 200, 200);
+    flex-grow: 0;
+    flex-shrink: 0;
 }
 
 .avatar{
@@ -61,6 +69,7 @@ body{
     align-items: center;
     gap: 13px;
     color: rgb(164, 162, 162);
+    font-size: 20px;
 }
 /*notifications*/
 .notifications{
@@ -83,9 +92,9 @@ body{
 /*search*/
 .search-contact{
     display: flex;
-    justify-content: center;
     padding: 10px;
     background-color: #fafafa;
+    width: 100%;
 }
 .search-lens{
     padding: 5px 20px;
@@ -94,15 +103,19 @@ body{
 }
 .search-input input{
     padding: 6px 8px;
-    width: 400px;
     border: 1px solid rgb(200, 200, 200);
 }
 /*contacts*/
 .contacts{
+    flex-grow: 1;
+    overflow-y: auto;
+}
+.contact{
     display: flex;
     justify-content: space-between;
-    padding: 15px 20px 8px 20px;
     border-bottom: 1px solid rgb(200, 200, 200);
+    padding: 15px 20px 8px 20px;
+
 }
 .avatar-name{
     display: flex;
@@ -110,4 +123,54 @@ body{
 }
 .time{
     color: rgb(164, 164, 164);
+}
+
+/*COL-RIGHT*/
+/*header-right*/
+.header-right{
+    display: flex;
+    padding-top: 10px;
+    justify-content: space-between;
+    background-color: rgb(239, 239, 239);
+    padding: 10px;
+    height: 70px;
+}
+.avatar-chat{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+.info-chat{
+    display: flex;
+    align-items: center;
+    gap: 13px;
+    color: rgb(164, 162, 162);
+    font-size: 20px;
+}
+/*chat*/
+.chat-box{
+    height: calc(100vh - 197px);
+    flex-grow: 1;
+    overflow-y: auto;
+    background-image: url(../img/img/mine.jpg);
+}
+/*write message*/
+.footer-chat{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(239, 239, 239);
+    gap: 30px;
+    padding: 8px 30px;
+    height: 65px;
+}
+.footer-chat i{
+    color: rgb(95, 95, 95);
+    font-size: 20px;
+}
+.write-mess input{
+    padding: 18px;
+    border-radius: 5px;
+    border: none;
+    font-size: 15px;
 }
